# distributed-video-transcoder

./: .gitignore  README.md
job-server/: Cargo.toml  run.sh
job-server/src/: inotify_watcher.rs  main.rs
node-server/: Cargo.toml  Dockerfile
node-server/src/: main.rs
