[package]
name = "job-server"
version = "0.1.0"
authors = ["Sami Lahtinen <sami.lahtinen@helsinki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.9.1"
rocket = "0.4.6"
uuid = { version = "0.8", features = ["v4"] }
